--- a/css/style.css
+++ b/css/style.css
@@ -283,7 +283,7 @@ body {
 
 @media(max-width: 800px) {
   .representation-text-quotation {
-    font-size: 1.5em;
+    font-size: 1em;
     padding: 0;
   }
   .representation-text-author {
